--- a/index.html
+++ b/index.html
@@ -4,5 +4,5 @@ hello
 <A HREF="https://plas.soka.ac.jp/csp/plas/p040902g.csp"><創価大学/A>
 <A HREF="https://srge.info/category/news"><日本イヌワシ研究会/A>
 
-<title>イヌワシの現状  
+  <title>イヌワシの現状</title>
   
