--- a/index.html
+++ b/index.html
@@ -5,4 +5,4 @@ hello
 <A HREF="https://srge.info/category/news"><日本イヌワシ研究会/A><br>
 
 <title>イヌワシの現状</title>
-<img src="image/sample.gif" alt="https://www.bing.com/search?q=%e3%82%a4%e3%83%8c%e3%83%af%e3%82%b7%e3%80%80%e7%92%b0%e5%a2%83%e7%9c%81&qs=HS&pq=%e3%82%a4%e3%83%8c%e3%83%af%e3%82%b7&sk=HS1&sc=10-4&cvid=99AFE7340CF14F0FB279B131B7915F8E&FORM=QBRE&sp=2" width=100 height=100>
+<img src="image/sample.gif" alt="イヌワシ" width=100 height=100>
