--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 hello
 
 <A HREF="https://plas.soka.ac.jp/csp/plas/p040902g.csp"><創価大学/A><br>
-<A HREF="https://srge.info/category/news"><日本イヌワシ研究会/A><br>
+<A HREF="https://srge.info/category/news"><日本イヌワシ研究会/A>
+
 
 <title>イヌワシの現状</title>
 <img src="image/sample.gif" alt="イヌワシ" width=100 height=100>
