--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 
 hello
 
-<A HREF="https://plas.soka.ac.jp/csp/plas/p040902g.csp"><創価大学/A>
+<A HREF="https://plas.soka.ac.jp/csp/plas/p040902g.csp"><創価大学/A><br>
 <A HREF="https://srge.info/category/news"><日本イヌワシ研究会/A><br>
                                                            
 <title>イヌワシの現状</title>
