--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 
 <title>イヌワシの生息地や現在の生殖率の変化</title>
 
+<h1>日本におけるイヌワシの特徴</h1>
+
 <A HREF="https://plas.soka.ac.jp/csp/plas/p040902g.csp"><創価大学/A><br>
   
 <A HREF="https://srge.info/category/news"><日本イヌワシ研究会/A><br>
