--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <h1>日本におけるイヌワシの特徴</h1><br>
 <h2>現状</h2>
-
+<p>現在の日本では，二ホンイヌワシの生息数は全国で約500匹である．
 <h2>原因<h2>
 <h2>対策<h2>  
 <A HREF="https://srge.info/category/news">日本イヌワシ研究会</A><br>                                                          
