--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <h2><font color="#ff9933">二ホンイヌワシの生態</font></h2>
 <p2>二ホンイヌワシは，タカ目タカ科に分類され，絶滅危惧IB類(環境省第4次レッドリスト)である．全長は81～89cm，翼開長168～213cmで，
   ノウサギ，ヤマドリ，ヘビ類等を主な食料とし，カモシカや二ホンジカの幼獣，テン等のほ乳類も捕食する．
-<h2>現状</h2>
+<h2><font color="#ff9933">現状</font></h2>
 <p>現在の日本では，二ホンイヌワシの生息数は全国で約500匹である．
-<h2>原因<h2>
-<h2>対策<h2>  
+<h2><font color="#ff9933">原因</font></h2>
+<h2><font color="#ff9933">対策</font></h2> 
 <A HREF="https://srge.info/category/news">日本イヌワシ研究会</A><br>                                                          
   
