--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <title>イヌワシの生息地や現在の生殖率の変化</title>
 <h2><font color="#ff9933">二ホンイヌワシの生態</font></h2>
 <p2>二ホンイヌワシは，タカ目タカ科に分類され，絶滅危惧IB類(環境省第4次レッドリスト)である．全長は81～89cm，翼開長168～213cmで，
-  ノウサギ，ヤマドリ，ヘビ類等を主な食料とし，カモシカや二ホンジカの幼獣，テン等のほ乳類も捕食する．
+  ノウサギ，ヤマドリ，ヘビ類等を主な食料とし，カモシカや二ホンジカの幼獣，テン等のほ乳類も捕食する．また，北海道から九州の山岳地帯まで生息している．</p2>
 <h2><font color="#ff9933">現状</font></h2>
 <p>現在の日本では，二ホンイヌワシの生息数は全国で約500匹である．
 <h2><font color="#ff9933">原因</font></h2>
