--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
 <p2>二ホンイヌワシは，タカ目タカ科に分類され，絶滅危惧IB類(環境省第4次レッドリスト)である．全長は81～89cm，翼開長168～213cmで，
   ノウサギ，ヤマドリ，ヘビ類等を主な食料とし，カモシカや二ホンジカの幼獣，テン等のほ乳類も捕食する．また，北海道から九州の山岳地帯まで生息している．</p2>
 <h2><font color="#ff9933">現状</font></h2>
-<p>現在の日本では，二ホンイヌワシの生息数は全国で約500匹である．
+<p2>現在，二ホンイヌワシの推定生息数は，150～200ペア(推定未登録ペアを含む)と単独個体を合わせ約500羽である．また多くの生息地は，近年の大規模な開発，
+  森林伐採，単一樹種による大規模な植林などにより大きく変化している．そのため二ホンイヌワシの食料となる動物の減少を招いている．さらに密猟や環境汚染物質の影響によって，
+  二ホンイヌワシは絶滅の危機に瀕している．</p2>
 <h2><font color="#ff9933">原因</font></h2>
 <h2><font color="#ff9933">対策</font></h2> 
 <A HREF="https://srge.info/category/news">日本イヌワシ研究会</A><br>                                                          
