--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   ノウサギ，ヤマドリ，ヘビ類等を主な食料とし，カモシカや二ホンジカの幼獣，テン等のほ乳類も捕食する．また，北海道から九州の山岳地帯まで生息している．</p2>
 <h2><font color="#ff9933">現状</font></h2>
 <p2>現在，二ホンイヌワシの推定生息数は，150～200ペア(推定未登録ペアを含む)と単独個体を合わせ約500羽である．
-  　北海道は1994年の当会合同調査において，日本で初めて繁殖個体群の存在が明らかになったが，具体的な生息数などはまだわからない．四国は過去に生息記録はあるが，近年は全く幼鳥は巣立っていない．
-  比較的生息数も多く，平成16年環境省・希少猛禽類調査の結果では繁殖状況も安定していると思われていた北の中部山岳地帯でも，餌不足や開発など人為的な影響によって徐々に生息域が狭まっている．</p2>
+  　北海道は1994年の合同調査において，日本で初めて繁殖個体群の存在が明らかになったが，具体的な生息数などはまだわからない．四国は過去に生息記録はあるが，近年は全く幼鳥は巣立っていない．
+  比較的生息数も多く，平成16年環境省・希少猛禽類調査の結果では繁殖状況も安定していると思われていた中部山岳地帯北部でも，餌不足や開発など人為的な影響によって徐々に生息域が狭まっている．</p2>
 <h2><font color="#ff9933">原因</font></h2>
 <p2>多くの生息地は，近年の大規模な開発，森林伐採，単一樹種による大規模な植林などにより大きく変化している．そのため二ホンイヌワシの食料となる動物の減少を招いている．さらに密猟や環境汚染物質の影響によって，
   二ホンイヌワシは絶滅の危機に瀕している．</p2>
