--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 　<p2>二ホンイヌワシ保全に係る事例集を活用した普及啓発が令和元年度から行われている．二ホンイヌワシの個体数を十分に維持・回復するため，近年低い水準にある繁殖成功率の向上に
 繋がる取り組みが必要である．そこで，全国における積極的な森林や草原の管理といった，自然資源を活用することで地域活性化を目指す取り組みの事例を集めた事例を環境省が作成した．
 主に3つの森林管理に関わる事例を紹介する．
-1つ目は，森林伐採の対策で「芸北せどやま再生事業」である．地域の森林を管理する対価として地域通貨「せどやま券」を発行している．このことにより，森林の管理が進み，また地域内でのみ利用できる通貨を地域の
+1つ目は，森林伐採の対策で「芸北せどやま再生事業」がある．地域の森林を管理する対価として地域通貨「せどやま券」を発行している．このことにより，森林の管理が進み，また地域内でのみ利用できる通貨を地域の
 商店街で使うことで，地域にお金が残り，地域経済が活性化される．
-2つ目は，近年の大規模な開発の対策で「南三陸地域イヌワシ生息環境再生プロジェクト」である．地域の森林に二ホンイヌワシの狩場となる開けた山の環境(伐採跡地など)が一定面積確保されるよう
+2つ目は，近年の大規模な開発の対策で「南三陸地域イヌワシ生息環境再生プロジェクト」がある．地域の森林に二ホンイヌワシの狩場となる開けた山の環境(伐採跡地など)が一定面積確保されるよう
 国と町，民間が調整して森林計画を立て，皆伐と植林を中心とした効率的な森林施業を行っている．また，木材を搬出するための作業道を共有したり，木材を共有出荷するなど，林業の効率化を
 図っている．</p2>
 <A HREF="https://srge.info/category/news">日本イヌワシ研究会</A><br>                                                          
