--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
   比較的生息数も多く，平成16年環境省・希少猛禽類調査の結果では繁殖状況も安定していると思われていた中部山岳地帯北部でも，餌不足や開発など人為的な影響によって徐々に生息域が狭まっている．</p2>
 <h2><font color="#ff9933">原因</font></h2>
 <p2>多くの生息地は，近年の大規模な開発，森林伐採，単一樹種による大規模な植林などにより大きく変化している．そのため二ホンイヌワシの食料となる動物の減少を招いている．さらに密猟や環境汚染物質の影響によって，
-  二ホンイヌワシは絶滅の危機に瀕している．</p2>
+  二ホンイヌワシは絶滅の危機に瀕している．
+<font color="red">[風力発電施設への衝突]</font>
+</p2>
 <h2><font color="#ff9933">対策</font></h2> 
 　<p2>二ホンイヌワシ保全に係る事例集を活用した普及啓発が令和元年度から行われている．二ホンイヌワシの個体数を十分に維持・回復するため，近年低い水準にある繁殖成功率の向上に
 繋がる取り組みが必要である．そこで，全国における積極的な森林や草原の管理といった，自然資源を活用することで地域活性化を目指す取り組みの事例を集めた事例を環境省が作成した．
