--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <h2><font color="#ff9933">原因</font></h2>
 <p>多くの生息地は，近年の大規模な開発，森林伐採，単一樹種による大規模な植林などにより大きく変化している．そのため二ホンイヌワシの食料となる動物の減少を招いている．さらに密猟や環境汚染物質の影響によって，
   二ホンイヌワシは絶滅の危機に瀕している．</p>
-<h2><font color:#ff0000;>[風力発電施設への衝突]</font><?h2>
+<h2><font color:#ff0000;>[風力発電施設への衝突]</font></h2>
 <p>自然エネルギーの利用促進のため，風力発電施設の建設が近年盛んになっている．しかし，各地で鳥類の衝突事故が報告されている．国内では多くの風車が建設されている．それらは，高原の牧場や屋根沿いなどの風の強い場所に設置されているが，
 こうした場所は二ホンイヌワシのとっても飛行しやすく、また餌場としても良く利用される環境にある．2008年9月に国内で初めての二ホンイヌワシの衝突事故が岩手県内で確認された．衝突したのは雌の成鳥で、左の前腕部が切断された．このことから，風車が二ホンイヌワシ
 に対して危険な存在であることが明確になった．</p>
