--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     お互いに奪い合っている。シマフクロウは大きな樹洞を必要とするため、アライグマの生息地の拡大がシマフクロウの存続に影響をもたらしている。アライグマはテレビで放送されたアニメ「あらいぐまラスカル」の影響から日本に輸入され、飼いきれなくなったアライグマが山に返されたことによって増殖した。アライグマとシマフクロウは一見、人間が関与していないように見えるが、実は人間がアライグマを増やし、それがシマフクロウに影響を及ぼしていたのである。
     
     <h2><font color="#daa520">【感電による被害】</font></h2>
-  <p>　絶滅危惧の要因として感電事故というものがある。猛禽類は止まり木として電柱を利用することがあり、その電柱によって感電事故につながっている。鉄塔にとまる際に電線に触れることで感電してしまう。電線だけでは回路はつながらないので、カラスや雀なdのは感電せずに電線にとまっているのをよく見かける。</p>
+  <p>　絶滅危惧の要因として感電事故というものがある。猛禽類は止まり木として電柱を利用することがあり、その電柱によって感電事故につながっている。鉄塔にとまる際に電線に触れることで感電してしまう。電線だけでは回路はつながらないので、カラスや雀などは感電せずに電線にとまっているのをよく見かける。</p>
   
     
     <h2><font color="#daa520">【バードウォッチングによる影響】</font></h2>
