--- a/index.html
+++ b/index.html
@@ -1,5 +1,14 @@
  
 <title>イヌワシの生息地や現在の生殖率の変化</title>
+<style type="text/css">
+body {
+   background-color: #486d46;            /* 背景色 */
+   background-image: url("http://hp-sozai.net/img/pic/pic_sky09_03.jpg"); /* 画像 */
+   background-size: cover;               /* 全画面 */
+   background-attachment: fixed;         /* 固定 */
+   background-position: center center;   /* 縦横中央 */
+}
+</style>
 <h2><font color="#ff9933">二ホンイヌワシ</font></h2>  
 <p>二ホンイヌワシは，タカ目タカ科に分類され，絶滅危惧IB類(環境省第4次レッドリスト)である．全長は81~89cm，羽を広げると168~213cmにも及び人間の平均身長よりも大きい．
   ノウサギ，ヤマドリ，ヘビ類等を主な食料とし，カモシカや二ホンジカの幼獣，テン等のほ乳類も捕食する．二ホンイヌワシの推定生息数は，150~200ペア(推定未登録ペアを含む)と単独個体を合わせ約500羽である．
